# ep_QX

./: .gitignore  CMakeLists.txt  FindROOT.cmake  README.md
experiment/: PT2.txt  Q2.txt  W.txt  Z.txt
python/: plots.ipynb  subs.py
src/: Jpsi_1c.c++  Kniehl_cs.c++  export_hist.c++  pol_3S1_co.c++  pol_Jpsi_1c.c++  test.c++
src/kinematics/: Rambo2.cpp  Rambo2.h  Rambo3.cpp  RamboEP.c++  RamboEP.h  algebra.cpp  algebra.h
src/matr2/: matr2.c++
src/tests/: test.c++  test_cuts.c++  test_polarizations.c++  test_rambo3.c++  test_ramboEP.c++  test_sp.c++  test_toys.c++
